Update for Java 24