@@ -3,13 +3,13 @@
 PASSES=2
 JAVA_MAJOR_VERSION=$(java -version 2>&1 | sed -E -n 's/.* version "([^.-]*).*"/\1/p' | cut -d' ' -f1)
 
-if [[ "$JAVA_MAJOR_VERSION" -lt 23 ]]; then
-  echo "Java version 23 required"
+if [[ "$JAVA_MAJOR_VERSION" -lt 24 ]]; then
+  echo "Java version 24 required"
   exit 1
 fi
 
-java --enable-preview TestJarGenerator.java out/test.jar
-java --enable-preview Optimizer.java out/test.jar out/optimized.jar $PASSES
+java TestJarGenerator.java out/test.jar
+java Optimizer.java out/test.jar out/optimized.jar $PASSES
 
 echo -n "test.jar output     : "
 java -jar out/test.jar arg1 arg2
